--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li>cat nip</li>
           <li>laser pointers</li>
           <li>lasagna</li>
+          <li>chees</li> 
         </ul>
         <figure>
           <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
